--- a/docs/previous/2020/r_install.Rmd
+++ b/docs/previous/2020/r_install.Rmd
@@ -12,14 +12,15 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Setting up your computer for using R/Rstudio
 
+This article will explain how to install R, Rstudio, and how to install packages into R. 
 
 # Download R
 
-Download R from CRAN. Go to the cran homepage https://cran.r-project.org/. Select the operating system. 
+Download R from CRAN. Go to the cran homepage https://cran.r-project.org/. Select your operating system. 
 
 ## MacOS
 
-Select the newest R version, download the `.pkg file, then open and install. 
+Select the newest R version, download the `.pkg` file, then open and install. 
 
 
 ## Windows
@@ -34,7 +35,7 @@ If you are on linux, then follow the documentation for your linux OS. Ryan Sheri
 
 ## MacOS
 
-You need to install the xcode command line tools. Open the Terminal from `/Applications/Utilities/` (or use the search tool to search for terminal)
+You may need to install the xcode command line tools if a package requires compilation. Open the Terminal from `/Applications/Utilities/` (or use the search tool to search for terminal)
      
 Type the following into Terminal: 
 
@@ -47,6 +48,16 @@ Press “Install” and verify installation by typing into terminal:
 ```bash
 gcc --version
 ```
+
+Which should print something similar to this:  
+
+```bash
+#' gcc (GCC) 4.8.5
+#' Copyright (C) 2015 Free Software Foundation, Inc.
+#' This is free software; see the source for copying conditions.  There is NO
+#' warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+```
+
 Here's a [youtube video explainer](https://www.youtube.com/watch?v=Z01lzHNrSdU&feature=emb_title) 
     
 Next you need to install `gfortran`. Follow this [link](https://thecoatlessprofessor.com/programming/cpp/r-compiler-tools-for-rcpp-on-macos/) and go to the "INSTALL OS-SPECIFIC GFORTRAN BINARY" section. Select the download link based on your macOS version. This will supply an installer. 
@@ -54,7 +65,6 @@ Next you need to install `gfortran`. Follow this [link](https://thecoatlessprofe
 ## Windows
 
 You need to install `Rtools` from CRAN. Go to this link and download the exe installer for your OS: https://cran.r-project.org/bin/windows/Rtools/
-     
      
 ## Linux
   You probably have a compiler already?
@@ -71,34 +81,45 @@ In general there are 3 common places that you can get R packages from:
 
 1) CRAN, this is the official R package repository. CRAN has 16,000+  packages, including the tidyverse (ggplot2, dplyr, etc) and Seurat. Packages are installed using the `install.packages()` function. A successful install only needs to be done once. 
 
+In your console execute the following:
+
 ```r
-install.packages("Seurat")
 install.packages("tidyverse")
 ```
 
-Test your installs by loading the package(s)
+```r
+install.packages("Seurat")
+```
+
+
+Test package installation once complete by loading the package(s)
 
 ```r
 library(tidyverse)
 library(Seurat)
 ```
 
-2) [Bioconductor](https://bioconductor.org/), which generally has bioinformatics related packages, such as clustifyr, DESeq2, ComplexHeatmap, etc.
+2) [Bioconductor](https://bioconductor.org/), which generally has bioinformatics related packages, such as clustifyr, DESeq2, ComplexHeatmap, etc. 
 
-To install you should use the CRAN `BiocManager`. For example to install `clustifyyr`
+To install bioconductor packages you should use the CRAN package `BiocManager`. BiocManager has a function called `install()` to install bioconductor packages. For example to install `clustifyyr`
 
 ```r
-if (!requireNamespace("BiocManager", quietly = TRUE))
-    install.packages("BiocManager")
-
-BiocManager::install("clustifyr")
-BiocManager::install("ComplexHeatmap")
+install.packages("BiocManager")
 ```
 
-3) [Github](https://github.com/) host open-source code from millions of projects. R packages hosted on github can be installed using the `remotes` package. Presto or djvdj are examples of packages on github. You'll need to find the organization name and the package name on github to install. 
+```r
+library(BiocManager)
+install("clustifyr")
+# or equivalently you could run BiocManager::install("clustifyr")
+```
 
-```#install.packages("remotes")
+3) [Github](https://github.com/) hosts open-source code from millions of projects. R packages hosted on github can be installed using the `remotes` package. `Presto` or `djvdj` are examples of single cell RNA-seq analysis packages on github. You'll need to find the organization name and the repository name on github to install. 
 
+```r
+install.packages("remotes")
+```
+
+```r
 remotes::install_github('rnabioco/djvdj')
 remotes::install_github('immunogenomics/presto')
 ```
