--- a/docker/test.Rmd
+++ b/docker/test.Rmd
@@ -1,22 +1,11 @@
 ---
-title: "Test out docker image"
+title: "Test out packages"
 author: "Kent Riemondy RBI"
 date: "`r Sys.Date()`"
-output:
-  html_document:
-    theme: yeti
-    toc: true
-    toc_float: true
-    toc_depth: 3
-    highlight: kate
-    fig_caption: true
-    code_folding: hide
-    df_print: paged
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE,
-                      cache = FALSE)
+knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(message = FALSE)
 knitr::opts_chunk$set(warning = FALSE)
 ```
