--- a/_posts/2021-10-20-working-with-your-own-single-cell-data/working-with-your-own-single-cell-data.Rmd
+++ b/_posts/2021-10-20-working-with-your-own-single-cell-data/working-with-your-own-single-cell-data.Rmd
@@ -4,7 +4,12 @@ description: |
   Guidelines for datasets to work with in the workshop, 
   information on where to get public datasets, and 
   examples of how to load different data formats into R. 
-author: "Kent Riemondy"
+author: 
+  - name: "Kent Riemondy"
+    url: https://github.com/kriemo
+    affiliation: "RNA Bioscience Initiative"
+    affiliation_url: https://medschool.cuanschutz.edu/rbi
+    orcid_id: 0000-0003-0750-1273
 date: 10-20-2021
 output:
   distill::distill_article:
