--- a/classes.Rmd
+++ b/classes.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "single cell RNA-seq workshop"
 site: distill::distill_website
-listing: posts
+listing: 
+  posts:
+    - 2021-10-14-r-installation
+    - 2021-10-15-running-rrstudio-with-docker
+    - 2021-10-20-working-with-your-own-single-cell-data
+    - 2021-10-21-prerequisite-material
 ---
